Redirect Service shortened URL
WHY: So when users follow a service shortened URL, they are redirected to the original URL

This change addresses the need by:
* Adding a method redirect_link to the LinksController class
* Adding a method display_link to the LinksHelper module
* Modifying the links show view to display the link

[Finishes #110112092]

--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Short url:</strong>
-  <%= @link.short_url %>
+  <a href = <%= "#{display_link(@link.short_url)}" %> target ="_blank"><%= display_link(@link.short_url)%></a>
 </p>
 
 <p>
@@ -12,3 +12,7 @@
 
 <%= link_to 'Edit', edit_link_path(@link) %> |
 <%= link_to 'Back', links_path %>
+
+
+<%= "
+                f.short_url)}"%>
