Recent and popular URLs
Why:So users can see URLs sorted by popularity and also sorted by how recently they were added

This change addresses the need by:
* Generate a Click resource
* Add the methods recent & popular to the Link model class
* Modified the pages/index view to display the links
* Generate a migration to add clicks_count column to Link table

[Finishes #110112200]

--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -12,6 +12,16 @@ body { padding-top: 70px; }
   padding: 30px;
 }
 
+/* Tooltip */
+.test + .tooltip > .tooltip-inner {
+    background-color: #3498db;
+    color: #FFFFFF;
+    border: 1px solid #2980b9;
+    padding: 25px;
+    font-size: 15px;
+    width: 400px;
+}
+
 // // make all images responsive by default
 // img {
 //   @extend .img-responsive;
