--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -11,7 +11,10 @@ body { padding-top: 70px; }
 .inner {
   padding: 30px;
 }
-
+.my_links{
+  padding-bottom: 50px;
+  margin-bottom:30px;
+}
 /* Tooltip */
 .test + .tooltip > .tooltip-inner {
     background-color: #3498db;
