--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -11,7 +11,7 @@ body { padding-top: 70px; }
 .inner {
   padding: 30px;
 }
-.my_links{
+.btm-space{
   padding-bottom: 50px;
   margin-bottom:30px;
 }
