--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -18,7 +18,7 @@
   </div>
 </div>
 <hr>
-<div class="col-sm-12  col-sm-offset-0 my_links" align ="center">
+<div class="col-sm-12  col-sm-offset-0 btm-space" align ="center">
   <h2 class="sub-header">My Links</h2>
   <div class="table-responsive">
     <table class="table table-bordered">
