Service shortened URL details
Why: So registered users can view usage details about each URL

This change addresses the need by:
*Generating a migration to add ip address and country of users to the click table
*Modifying the LinksCotroller#redirect to capture the details of each click before redirect
*Defining methods in ClicksHelper to get the ip and country where click originated from.
*Defining methods in Click model class to set the ip and country of click and also setup charts for display in details view
*Modifying the Links show view to display the usage information.

[Finishes #110112658]
[Finishes #110112570]

--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,14 +1,30 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Short url:</strong>
-  <a href = <%= "#{display_link(@link.short_url)}" %> target ="_blank"><%= display_link(@link.short_url)%></a>
-</p>
-
-<p>
   <strong>Url:</strong>
   <%= @link.url %>
 </p>
 
-<%= link_to 'Edit', edit_link_path(@link) %> |
-<%= link_to 'Back', links_path %>
+<p>
+  <strong>Short url:</strong>
+  <%= @link.short_url %>
+</p>
+
+<div class="panel panel-default center-block">
+  <div class="panel-heading">Number of visits by country</div>
+  <div class="panel-body">
+    <img src="<%= @count_country_map %>" class="img-responsive ">
+  </div>
+</div>
+
+<div class="panel panel-default center-block">
+  <div class="panel-heading">Number of visits</div>
+  <div class="panel-body">
+    <img src="<%= @count_country_bar %>" class="img-responsive ">
+  </div>
+</div>
+
+<div class="btm-space">
+  <%= link_to 'Edit', edit_link_path(@link) %> |
+  <%= link_to 'Back', dashboard_path %>
+</div>
