--- a/app/views/links/_form.html.erb
+++ b/app/views/links/_form.html.erb
@@ -1,10 +1,46 @@
-<%= semantic_form_for @link do |f| %>
-  <%= f.inputs do %>
-    <%= f.input :short_url %>
-    <%= f.input :url %>
-  <% end %>
+<div class="container">
+  <div class="row">
+    <%= form_for @link, html: { class: "form-horizontal" } do |f| %>
+      <% if @link.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@link.errors.count, "error") %> prohibited this link from being saved:</h2>
 
-  <%= f.actions do %>
-    <%= f.action :submit, :as => :input %>
-  <% end %>
-<% end %>
+          <ul>
+          <% @link.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
+      <% end %>
+
+      <div class="field form-group">
+        <%= f.label :url, class: "col-sm-2 control-label" %><br>
+        <div class="col-sm-8">
+          <%= f.text_field :url, class: "form-control" %>
+        </div>
+      </div>
+      <div class="field form-group">
+        <%= f.label :short_url, class: "col-sm-2 control-label" %><br>
+        <div class="col-sm-8">
+          <%= f.text_field :short_url, class: "form-control" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.label :active, class: "col-sm-2 control-label"  %>
+        <div class="col-sm-10">
+          <div class="checkbox">
+          <label>
+            <%= f.check_box :active %>
+          </label>
+          </div>
+        </div>
+      </div>
+      <div class="actions form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <%= f.submit class: "btn btn-primary"%>
+        </div>
+      </div>
+    <% end %>
+
+  </div>
+</div>
