--- a/app/views/links/_form.html.erb
+++ b/app/views/links/_form.html.erb
@@ -35,6 +35,16 @@
           </div>
         </div>
       </div>
+      <div class="form-group">
+        <%= f.label :deleted, class: "col-sm-2 control-label"  %>
+        <div class="col-sm-10">
+          <div class="checkbox">
+          <label>
+            <%= f.check_box :deleted %>
+          </label>
+          </div>
+        </div>
+      </div>
       <div class="actions form-group">
         <div class="col-sm-offset-2 col-sm-10">
           <%= f.submit class: "btn btn-primary"%>
